# Coding-Exercises

./: LeetCode.py  ReadMe.txt  pyproject.toml
DL_HW/: Assignment_1.ipynb  Assignment_2_Victor_Philippe.ipynb  Assignment_3_Victor_Philippe.ipynb  Assignment_4_Philippe.ipynb
IoT_HW/: HW2_RL_Taxi_Cab_Solution.ipynb  HW4_SVM_Tree.ipynb
LeetCode/: LeetCode.py
ML Coding/: LogisticRegressionNumpy.py  knn_numpy.py
ML_Coding/: activation_funcs_no_numpy.py  matrix_ops_no_numpy.py
