[project]
name = "coding-exercises"
version = "0.1"
description = "Collection of coding exercises I have worked on"
authors = [
    {name = "Victor Philippe"}
]
license = {text = "None"}
readme = "ReadMe.txt"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.2,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scikit-learn (>=1.6.1,<2.0.0)",
    "pandas (>=2.2.3,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
